Actualizado about.html

--- a/www/about.html
+++ b/www/about.html
@@ -21,8 +21,7 @@ trabajar, que no tuviera tanta importancia y lo hiciera de relax, la idea es
 publicar snipets de código que generalmente se me olvidan y siempre estoy 
 volviendo a ellos, si en algún momento me emociono quizás publico algo 
 totalmente distinto.</p>
-<p>Para ver los proyectos que he hecho puedes verlos entre
-<a href="https://github.com/Ryuuji159">Github</a> y <a href="https://git.sr.ht/~skrd159">Source Hut</a>.</p>
+<p>Para ver los proyectos que he hecho puedes verlos en <a href="https://gitlab.com/Ryuuji159">Gitlab</a></p>
 <p>Socialmente me muevo entre <a href="https://twitter.com/skrd159">Twitter</a> y 
 <a href="https://www.reddit.com/user/Ryuuji159">Reddit</a> aunque estoy intentando dejar 
 las redes sociales como ya lo hice con Facebook.</p>
