Agrege articulo a random

--- a/www/random.html
+++ b/www/random.html
@@ -23,6 +23,7 @@
 <li><a href="https://www.robinsloan.com/notes/home-cooked-app/">An app can be a home-cooked meal</a></li>
 <li><a href="https://datagubbe.se/decusab/">The Decline of Usability</a></li>
 <li><a href="https://baekdal.com/thoughts/the-original-cookie-specification-from-1997-was-gdpr-compliant/">The Original Cookie specification from 1997 was GDPR compliant</a></li>
+<li><a href="https://tonsky.me/blog/syncthing/">Computers as I used to love them</a></li>
 </ul>
 <h2>Recursos</h2>
 <ul>
