--- a/template.html
+++ b/template.html
@@ -7,21 +7,9 @@
     <meta name="author" content="Daniel Cortés">
     <link rel="stylesheet" href="/assets/style.css" type="text/css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <script src="/assets/script.js"></script>
   </head>
   <body>
-    <div class="container">
-      {{ md }}
-    </div>
-    <script>
-      function makeImagesClickeable() {
-        document.querySelectorAll("img").forEach(img => {
-          img.addEventListener("click", e => window.open(e.target.src))
-        });
-      }
-
-      window.addEventListener('load', (event) => {
-        makeImagesClickeable();
-      });
-    </script>
+    {{ md }}
   </body>
 </html>
