--- a/template.html
+++ b/template.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/assets/style.css" type="text/css">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <script src="/assets/script.js"></script>
+    <script async defer data-website-id="83238781-ea4b-4cc6-8807-4f0f28fe2076" src="https://umami.danielcortes.xyz/umami.js"></script>
+    <script async defer data-website-id="97ffa7e2-61c3-4e81-8caa-bd87270dacc2" src="https://umami.danielcortes.xyz/umami.js"></script>
   </head>
   <body>
     {{ md }}
